[gd_scene load_steps=54 format=3 uid="uid://cbd1iqyawr1pg"]

[ext_resource type="Texture2D" uid="uid://btcws26ptwhhc" path="res://assets/chicken/chicken_walk_strip8.png" id="1_b1kxe"]
[ext_resource type="Script" path="res://scripts/pets/chicken.gd" id="1_vvyqu"]
[ext_resource type="Script" path="res://scripts/states/state_machine.gd" id="2_te4kr"]
[ext_resource type="Script" path="res://scripts/states/pets/chicken/chicken_roam.gd" id="3_xsbj3"]
[ext_resource type="Script" path="res://scripts/states/pets/chicken/chicken_avoid.gd" id="4_3eh6a"]
[ext_resource type="Texture2D" uid="uid://clj7j876oisou" path="res://assets/chicken/chicken_idle_strip4.png" id="4_q2l4s"]
[ext_resource type="Texture2D" uid="uid://mp2vcc6ri2eg" path="res://assets/chicken/chicken_idle_blink_strip4.png" id="5_g3lp5"]
[ext_resource type="Script" path="res://scripts/states/pets/chicken/chicken_drag.gd" id="5_qhtcn"]
[ext_resource type="Texture2D" uid="uid://df5rgpb8wfor7" path="res://assets/chicken/chicken_fly_strip4.png" id="6_jj6us"]
[ext_resource type="Script" path="res://scripts/states/pets/chicken/chicken_fall.gd" id="6_mj5gb"]
[ext_resource type="Texture2D" uid="uid://dg8hnqfb1d4e0" path="res://assets/chicken/chicken_fright_strip5.png" id="6_rw4fr"]
[ext_resource type="Texture2D" uid="uid://27dw5mimfb5h" path="res://assets/chicken/chicken_run_strip4.png" id="7_7ume2"]
[ext_resource type="Script" path="res://scripts/states/pets/chicken/chicken_sit.gd" id="7_v4h6b"]
[ext_resource type="Texture2D" uid="uid://c7brp1t3qvdr2" path="res://assets/chicken/chicken_land_strip4.png" id="11_0d4d5"]
[ext_resource type="Texture2D" uid="uid://blopi47tra32j" path="res://assets/chicken/chicken_sit_strip4.png" id="13_toc35"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dvgvl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kvch0"]
atlas = ExtResource("6_jj6us")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_45p7s"]
atlas = ExtResource("6_jj6us")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_irxr1"]
atlas = ExtResource("6_jj6us")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtivr"]
atlas = ExtResource("6_jj6us")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_pt8rx"]
atlas = ExtResource("6_rw4fr")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_hby0l"]
atlas = ExtResource("6_rw4fr")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_mypyq"]
atlas = ExtResource("6_rw4fr")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_i05dg"]
atlas = ExtResource("6_rw4fr")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_qccxn"]
atlas = ExtResource("4_q2l4s")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_gio7e"]
atlas = ExtResource("4_q2l4s")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_as7fk"]
atlas = ExtResource("4_q2l4s")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_5nesp"]
atlas = ExtResource("4_q2l4s")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfxda"]
atlas = ExtResource("5_g3lp5")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_sn5uq"]
atlas = ExtResource("5_g3lp5")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_kl53j"]
atlas = ExtResource("5_g3lp5")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_cwm5q"]
atlas = ExtResource("5_g3lp5")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_iw2mo"]
atlas = ExtResource("11_0d4d5")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3oe7"]
atlas = ExtResource("11_0d4d5")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_shh6r"]
atlas = ExtResource("11_0d4d5")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_qyr0l"]
atlas = ExtResource("11_0d4d5")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6j2o"]
atlas = ExtResource("7_7ume2")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ubw7"]
atlas = ExtResource("7_7ume2")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ay64o"]
atlas = ExtResource("7_7ume2")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_is1m2"]
atlas = ExtResource("7_7ume2")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ds1rp"]
atlas = ExtResource("13_toc35")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_w65qb"]
atlas = ExtResource("13_toc35")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_b26sv"]
atlas = ExtResource("13_toc35")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4ooi"]
atlas = ExtResource("13_toc35")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_sxpok"]
atlas = ExtResource("1_b1kxe")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_xg61h"]
atlas = ExtResource("1_b1kxe")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3y4l"]
atlas = ExtResource("1_b1kxe")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_wcqmt"]
atlas = ExtResource("1_b1kxe")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgldf"]
atlas = ExtResource("1_b1kxe")
region = Rect2(160, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_gb5ln"]
atlas = ExtResource("1_b1kxe")
region = Rect2(200, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_xov25"]
atlas = ExtResource("1_b1kxe")
region = Rect2(240, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_2m4j4"]
atlas = ExtResource("1_b1kxe")
region = Rect2(280, 0, 40, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_b8yyq"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvch0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_45p7s")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irxr1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtivr")
}],
"loop": true,
"name": &"chicken_fall",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pt8rx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hby0l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mypyq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i05dg")
}],
"loop": true,
"name": &"chicken_fright",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qccxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gio7e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_as7fk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5nesp")
}],
"loop": true,
"name": &"chicken_idle",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfxda")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sn5uq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kl53j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cwm5q")
}],
"loop": true,
"name": &"chicken_idle_blink",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iw2mo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3oe7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shh6r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qyr0l")
}],
"loop": false,
"name": &"chicken_land",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6j2o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ubw7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ay64o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_is1m2")
}],
"loop": true,
"name": &"chicken_run",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ds1rp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w65qb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b26sv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4ooi")
}],
"loop": true,
"name": &"chicken_sit",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sxpok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xg61h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3y4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wcqmt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgldf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gb5ln")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xov25")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2m4j4")
}],
"loop": true,
"name": &"chicken_walk",
"speed": 8.0
}]

[node name="Chicken" type="CharacterBody2D" node_paths=PackedStringArray("visible_clickable_area", "visual")]
script = ExtResource("1_vvyqu")
visible_clickable_area = NodePath("VisibleClickableArea")
visual = NodePath("Visual")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_te4kr")
initial_state = NodePath("ChickenRoam")

[node name="ChickenRoam" type="Node" parent="StateMachine" node_paths=PackedStringArray("chicken", "visual")]
script = ExtResource("3_xsbj3")
chicken = NodePath("../..")
visual = NodePath("../../Visual")

[node name="ChickenAvoid" type="Node" parent="StateMachine" node_paths=PackedStringArray("chicken", "visual")]
script = ExtResource("4_3eh6a")
chicken = NodePath("../..")
visual = NodePath("../../Visual")

[node name="ChickenDrag" type="Node" parent="StateMachine" node_paths=PackedStringArray("chicken", "visible_clickable_area", "visual")]
script = ExtResource("5_qhtcn")
chicken = NodePath("../..")
visible_clickable_area = NodePath("../../VisibleClickableArea")
visual = NodePath("../../Visual")

[node name="ChickenFall" type="Node" parent="StateMachine" node_paths=PackedStringArray("chicken", "visual")]
script = ExtResource("6_mj5gb")
chicken = NodePath("../..")
visual = NodePath("../../Visual")

[node name="ChickenSit" type="Node" parent="StateMachine" node_paths=PackedStringArray("chicken", "visual")]
script = ExtResource("7_v4h6b")
chicken = NodePath("../..")
visual = NodePath("../../Visual")

[node name="MouseArea" type="Area2D" parent="."]
position = Vector2(0, -10)

[node name="CollisionShape2D" type="CollisionShape2D" parent="MouseArea"]
shape = SubResource("CircleShape2D_dvgvl")

[node name="Visual" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -13)
sprite_frames = SubResource("SpriteFrames_b8yyq")
animation = &"chicken_sit"
frame_progress = 0.278812

[node name="VisibleClickableArea" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(12, 0, 12, -22, -12, -22, -12, 0)

[connection signal="mouse_entered" from="MouseArea" to="StateMachine/ChickenAvoid" method="_on_mouse_area_mouse_entered"]
[connection signal="mouse_exited" from="MouseArea" to="StateMachine/ChickenDrag" method="_on_mouse_area_mouse_exited"]
[connection signal="animation_finished" from="Visual" to="StateMachine/ChickenFall" method="_on_visual_animation_finished"]
